# opengl-lab

./: .gitignore  CMakeLists.txt
3rd-libs/assimp/: CMakeLists.txt
3rd-libs/glad/: CMakeLists.txt
3rd-libs/glad/include/glad/: glad.h
3rd-libs/glad/src/: glad.c
3rd-libs/imgui/: CMakeLists.txt
3rd-libs/imgui/examples/example_glfw_opengl3/: .Makefile.un~  Makefile  Makefile~
include/: camera.h  filesystem.h  header.h  light.h  mesh.h  model.h  shader_s.h
resource/model/creeper/: Creeper.blend  Creeper.mtl
src/lab1/model/: main.cpp  model.cpp  model.fs  model.vs
